--- a/src/index.html
+++ b/src/index.html
@@ -79,15 +79,26 @@
     
         <!-- Page Content  -->
         <div id="content">
-            <div id="top-nav" class="row">
+            <!--<div id="top-nav" class="row">
                 <div class="col-sm-6 form-group has-search">
                     <i class="fa fa-search form-control-feedback"></i>
                     <input type="text" class="form-control" placeholder="Search">
                 </div>
-                <div id="login" class="col-sm-6">
-                        <button class="btn btn-secondary float-right">Login</button>
+            </div>-->
+
+            <div id="login-bar" class="row">
+                <div class="col-sm-2 login"><a href=""><p>LOGIN</p></a></div>
+                <div class="col-sm-4 login">
+                    <input type="text" class="" ng-model="username" required="" placeholder="&nbsp;username"/>
                 </div>
+                <div class="col-sm-4 login">
+                    <input type="password" class="" ng-model="password" required="" placeholder="&nbsp;password"/>
+                </div>
+                <div class="col-sm-1 login">
+                    <a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
+                </div> 
             </div>
+            
             <app-root></app-root>
         </div>
     </div>
