--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,14 @@
 
 </head>
 <body>
-    <div class="wrapper">
+    <div id="sidebar" class="wrapper">
         <!-- Sidebar  -->
-        <nav id="sidebar">
+        <nav>
             <div class="sidebar-header">
                 <h3>Keyblade Stories</h3>
                 <strong>KS</strong>
             </div>
             <hr class="hr-90">
-    
             <ul class="list-unstyled components">
                 <li class="active">
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">
@@ -69,14 +68,16 @@
                     </a>
                 </li>
                 <li>
-                  <a href="#">
-                      <i class="fa fa-star" aria-hidden="true">&nbsp;&nbsp;Favorites</i>
-                  </a>
+                    <a href="#">
+                        <i class="fa fa-star" aria-hidden="true">&nbsp;&nbsp;Favorites</i>
+                    </a>
                 </li>
             </ul>
             <hr class="hr-90">
         </nav><!--END NAV -->
-    
+    </div>
+
+    <div class="wrapper">
         <!-- Page Content  -->
         <div id="content">
             <!--<div id="top-nav" class="row">
@@ -86,8 +87,19 @@
                 </div>
             </div>-->
 
+            <div id="sidebar-login-mobile" class="row d-lg-none">
+                <div class="col-sm-6">
+                    <a onclick="showSB()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-sm-6">
+                    <a href=""><p>LOGIN</p></a>
+                </div>
+            </div>
+
             <div id="login-bar" class="row">
-                <div class="col-sm-2 login"><a href=""><p>LOGIN</p></a></div>
+                <div id="login-btn" class="col-sm-2 login">
+                    <a href=""><p>LOGIN</p></a>
+                </div>
                 <div class="col-sm-4 login">
                     <input type="text" class="" ng-model="username" required="" placeholder="&nbsp;username"/>
                 </div>
