--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,20 @@
         </nav><!--END NAV -->
     </div>
 
+    <!-- Mobile Menu -->
+    <div id="mobileNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+        <!-- Overlay content -->
+        <div class="overlay-content">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Profile</a>
+            <a href="#">Stories</a>
+            <a href="#">Favourites</a>
+        </div>
+    </div>
+
     <div class="wrapper">
         <!-- Page Content  -->
         <div id="content">
@@ -87,15 +101,17 @@
                 </div>
             </div>-->
 
+            <!-- Login Bar - Mobile Screen -->
             <div id="sidebar-login-mobile" class="row d-lg-none">
                 <div class="col-sm-6">
-                    <a onclick="showSB()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                    <a onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
                 </div>
                 <div class="col-sm-6">
                     <a href=""><p>LOGIN</p></a>
                 </div>
             </div>
 
+            <!-- Login Bar - Full Screen -->
             <div id="login-bar" class="row">
                 <div id="login-btn" class="col-sm-2 login">
                     <a href=""><p>LOGIN</p></a>
@@ -111,8 +127,8 @@
                 </div> 
             </div>
             
-            <app-root></app-root>
         </div>
     </div>
+    <app-root></app-root>
 </body>
 </html>
