--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
             </div>-->
 
             <!-- Login Bar - Mobile Screen -->
-            <div id="sidebar-login-mobile" class="row d-lg-none">
+            <div id="sidebar-login-mobile" class="row d-md-none">
                 <div class="col-sm-6">
                     <a onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
                 </div>
