Routing and registration page
Added routing within the app.module.ts and app-routing.module.ts to navigate between pages by /register or /user at the end of localhost.  Pages will be displayed at the body of the mainpage right now. need to find a way to separate the pages.

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,13 @@
                 </li>
             </ul>
             <hr class="hr-90">
+            <ul id="profile_nav" class="list-unstyled components">
+                <li>
+                    <a routerLink="/register">
+                        <i class="fa fa-user" aria-hidden="true">&nbsp;&nbsp;Register</i>
+                    </a>
+                </li>
+            <hr class="hr-90">
         </nav><!--END NAV -->
     </div>
 
@@ -130,5 +137,6 @@
         </div>
     </div>
     <app-root></app-root>
+    <router-outlet></router-outlet>
 </body>
 </html>
